--- a/index.html
+++ b/index.html
@@ -1,22 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Raquel Calazans</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <header>
-        <nav class="menu">
-          <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portifólio</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Raquel Calazans</h1>
-        <h2 class="site-subtitle">jr. frontend developer</h2>
-      </header>
-</body>
-</html>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Raquel Calazans</title>
+  <link rel="stylesheet" href="./css/style.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&family=Montserrat+Alternates:wght@300;400;700&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/0924d110a0.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <nav class="menu">
+      <ul>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#portifolio">Portifólio</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+    <div class="titulo">
+      <h1 class="site-title">Raquel Calazans</h1>
+      <h2 class="site-subtitle">jr. frontend developer</h2>
+    </div>
+  </header>
+  <section class="portfolio" id="portifolio">
+    <h2>Portfólio</h2>
+    <div class="grid">
+      <figure>
+        <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+        <figcaption>eCommerce</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+        <figcaption>Mobile</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+        <figcaption>Web design</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+        <figcaption>Projetos pessoais</figcaption>
+      </figure>
+    </div>
+  </section>
+  <section class="contato" id="contato">
+    <h2>Contato</h2>
+    <div class="grid icons">
+      <a target="_blank" href="https://github.com/raqcalazans">
+        <i class="fab fa-github-alt"></i>
+      </a>
+      <a target="_blank" href="https://twitter.com/raqcalazans">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a target="_blank" href="https://linkedin.com/in/raqcalazans">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://instagram.com/raquelcalazans_">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </section>
+</body>
+
+</html>
