chance github icon

--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
     </p>
 
     <p>
-      Este site foi construído durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>.
+      Este site foi construído durante a <a target="_blank" href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>. Gratidão Vanessa, Juliana e Paulo!
     </p>
 
   </section>
   <section class="portfolio container" id="portfolio">
     <h2>Portfólio</h2>
     <div class="grid">
+
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
@@ -124,6 +125,37 @@
           </div>
         </div>
       </div>
+
+      <div class="flip-card">
+        <div class="card">
+          <figure class="card-front">
+            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+            <figcaption>Web design</figcaption>
+          </figure>
+          <div class="card-back">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
+              velit.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="flip-card">
+        <div class="card">
+          <figure class="card-front">
+            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+            <figcaption>Web design</figcaption>
+          </figure>
+          <div class="card-back">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
+              velit.
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
@@ -131,7 +163,7 @@
     <!-- <h2>Contato</h2> -->
     <div class="grid icons">
       <a target="_blank" href="https://github.com/raqcalazans">
-        <i class="fab fa-github-alt"></i>
+        <i class="fab fa-github"></i>
       </a>
       <a target="_blank" href="https://twitter.com/raqcalazans">
         <i class="fab fa-twitter"></i>
