--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
-            <figcaption>eCommerce</figcaption>
+            <img class="img-portfolio" src="./img/Page pessoal Reprograma.jpg" alt="Imagem da minha page pessoal">
+            <figcaption>Page Pessoal</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
-              velit.
+                Esse é o meu primeiro projeto Front-end. É uma Page Pessoal feita em um workshop de um dia. Tenho muito orgulho do resultado que consegui com apenas HTML e CSS. Veja <a target="_blank" href="https://raqcalazans.github.io/PagePessoalReprograma/">aqui.</a>
             </p>
           </div>
         </div>
