--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <a target="_blank" href="https://linkedin.com/in/raqcalazans">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="https://instagram.com/raquelcalazans_">
+      <a href="https://instagram.com/raqcalazans">
         <i class="fab fa-instagram"></i>
       </a>
       <a target="_blank" href="mailto:raqcalazans@gmail.com">
