--- a/index.html
+++ b/index.html
@@ -82,13 +82,12 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
-            <figcaption>Mobile</figcaption>
+            <img class="img-portfolio" src="./img/Mundo Gelado pronto.png" alt="Agência Mundo Gelado">
+            <figcaption>Agência Mundo Gelado</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
-              velit.
+              Este é um site estático e responsivo de uma agência de viagens fictícia. Foi o exercício da 2ª semana do bootcamp online de front-end da {reprograma}, o tema era Responsividade. Veja <a target="_blank" href="https://raqcalazans.github.io/MundoGelado/">aqui.</a>
             </p>
           </div>
         </div>
@@ -97,29 +96,13 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-            <figcaption>Web design</figcaption>
-          </figure>
-          <div class="card-back">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
-              velit.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="flip-card">
-        <div class="card">
-          <figure class="card-front">
-            <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg"
+            <img class="img-portfolio" src="./img/Viajando com a Carol.png"
               alt="Projetos pessoais">
-            <figcaption>Projetos pessoais</figcaption>
+            <figcaption>Viajando com a Carol</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
-              velit.
+              Este projeto é um blog de uma personagem fictícia que dá dicas de viagem. Foi o exercício da 3ª semana do bootcamp online de front-end da {reprograma}, o tema era Bootstrap. Veja <a href="https://raqcalazans.github.io/ViajandoComACarol/">aqui.</a>
             </p>
           </div>
         </div>
@@ -128,13 +111,12 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-            <figcaption>Web design</figcaption>
+            <img class="img-portfolio" src="./img/ToDoList.png" alt="Web design">
+            <figcaption>To Do List</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
-              velit.
+              Site para cadastrar tarefas, marcar as já feitas e excluir as que desejar. Foi o exercício da 6ª semana do bootcamp da {reprograma}. Feito com HTML, CSS e JavaScript.<br>Veja <a href="https://raqcalazans.github.io/ToDoList/">aqui</a>.</p>
             </p>
           </div>
         </div>
@@ -143,13 +125,27 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-            <figcaption>Web design</figcaption>
+            <img class="img-portfolio" src="./img/Portal de Filmes - trecho.png" alt="Portal de Filmes">
+            <figcaption>Portal de Filmes</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero dolorem, cum eaque natus nostrum
-              velit.
+              Este portal foi criado para a matéria de Desenvolvimento de Interfaces Web do curso de Engenharia de Software da PUC/MG utilizando HTML, CSS, JavaScript e a API The Movie DB. Veja <a target="_blank" href="https://raqcalazans.github.io/PortalDeFilmes/">aqui.</a>
+
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="flip-card">
+        <div class="card">
+          <figure class="card-front">
+            <img class="img-portfolio" src="./img/Glicetec - logo.png" alt="Web design">
+            <figcaption>Glicetec</figcaption>
+          </figure>
+          <div class="card-back">
+            <p>
+              O Glicetec é uma aplicação web que é um assistente médico pessoal de diabéticos e pré-diabéticos. Desenvolvido em HTML, CSS, JavaScript, Bootstrap, jQuery e JSON LocalStorage. Veja <a target="_blank" href="https://icei-puc-minas-pples-ti.github.io/plf-es-2021-1-ti1-7946100-glicemiaglicetec/">aqui.</a>
             </p>
           </div>
         </div>
