--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </figure>
           <div class="card-back">
             <p>
-              Este projeto é um blog de uma personagem fictícia que dá dicas de viagem. Foi o exercício da 3ª semana do bootcamp online de front-end da {reprograma}, o tema era Bootstrap. Veja <a href="https://raqcalazans.github.io/ViajandoComACarol/">aqui.</a>
+              Este projeto é um blog de uma personagem fictícia que dá dicas de viagem. Foi o exercício da 3ª semana do bootcamp online de front-end da {reprograma}, o tema era Bootstrap. Veja <a target="_blank" href="https://raqcalazans.github.io/ViajandoComACarol/">aqui.</a>
             </p>
           </div>
         </div>
@@ -116,7 +116,7 @@
           </figure>
           <div class="card-back">
             <p>
-              Site para cadastrar tarefas, marcar as já feitas e excluir as que desejar. Foi o exercício da 6ª semana do bootcamp da {reprograma}. Feito com HTML, CSS e JavaScript.<br>Veja <a href="https://raqcalazans.github.io/ToDoList/">aqui</a>.</p>
+              Site para cadastrar tarefas, marcar as já feitas e excluir as que desejar. Foi o exercício da 6ª semana do bootcamp da {reprograma}. Feito com HTML, CSS e JavaScript.<br>Veja <a target="_blank" href="https://raqcalazans.github.io/ToDoList/">aqui</a>.</p>
             </p>
           </div>
         </div>
