--- a/index.html
+++ b/index.html
@@ -38,22 +38,17 @@
     </figure> -->
 
     <p>
-      Baiana, filha de cariocas, irmã de capixabas, neta de cearense e atualmente moro em Minas Gerais, terra da minha
-      avó paterna.
+      Baiana, filha de cariocas, irmã de capixabas, neta de cearense e atualmente moro em Minas Gerais, terra da minha avó paterna.
     </p>
 
     <p>
-      Sou uma pessoa que sonha em causar impacto positivo na vida das pessoas, por isso sou muito dedicada em tudo que
-      faço. Vejo a programação como uma oportunidade de sempre aprender coisas novas e ter ferramentas para criar o que
-      minha imaginação permitir.
+      Sou uma pessoa que sonha em causar impacto positivo na vida das pessoas, por isso sou muito dedicada em tudo que faço. Vejo a programação como uma oportunidade de sempre aprender coisas novas e ter ferramentas para criar o que minha imaginação permitir.
     </p>
 
     <p>
       Toco violão. Medito todos os dias. Cuido das minhas plantinhas. Comecei a estudar
       programação no começo de 2019 quando entrei no curso técnico de Desenvolvimento de Sistemas do <a
-        href="http://www.coltec.ufmg.br/coltec-ufmg/">Coltec UFMG</a>. Quando criança fui medalhista de natação.
-      Participava de uma fogueira mensal de mulheres, antes da quarentena acabar com a nossa graça. Corria quase todo os
-      dias, hoje me exercito em casa.
+      href="http://www.coltec.ufmg.br/coltec-ufmg/">Coltec UFMG</a>. Quando criança fui medalhista de natação. Participava de uma fogueira mensal de mulheres, antes da pandemia acabar com a nossa graça. Corria quase todos os dias, hoje me exercito em casa.
     </p>
 
     <p>
@@ -87,7 +82,7 @@
           </figure>
           <div class="card-back">
             <p>
-              Este é um site estático e responsivo de uma agência de viagens fictícia. Foi o exercício da 2ª semana do bootcamp online de front-end da {reprograma}, o tema era Responsividade. Veja <a target="_blank" href="https://raqcalazans.github.io/MundoGelado/">aqui.</a>
+              Este é um site estático e responsivo de uma agência de viagens fictícia. Foi o exercício da 2ª semana do bootcamp online de front-end da <a target="_blank" href="https://reprograma.com.br/">{reprograma}</a>, o tema era Responsividade. Veja <a target="_blank" href="https://raqcalazans.github.io/MundoGelado/">aqui.</a>
             </p>
           </div>
         </div>
@@ -97,12 +92,12 @@
         <div class="card">
           <figure class="card-front">
             <img class="img-portfolio" src="./img/Viajando com a Carol.png"
-              alt="Projetos pessoais">
+              alt="Blog Viajando com a Carol">
             <figcaption>Viajando com a Carol</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Este projeto é um blog de uma personagem fictícia que dá dicas de viagem. Foi o exercício da 3ª semana do bootcamp online de front-end da {reprograma}, o tema era Bootstrap. Veja <a target="_blank" href="https://raqcalazans.github.io/ViajandoComACarol/">aqui.</a>
+              Este projeto é um blog de uma personagem fictícia que dá dicas de viagem. Foi o exercício da 3ª semana do bootcamp online de front-end da <a target="_blank" href="https://reprograma.com.br/">{reprograma}</a>, o tema era Bootstrap. Veja <a target="_blank" href="https://raqcalazans.github.io/ViajandoComACarol/">aqui.</a>
             </p>
           </div>
         </div>
@@ -111,12 +106,12 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/ToDoList.png" alt="Web design">
+            <img class="img-portfolio" src="./img/ToDoList.png" alt="To Do List">
             <figcaption>To Do List</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              Site para cadastrar tarefas, marcar as já feitas e excluir as que desejar. Foi o exercício da 6ª semana do bootcamp da {reprograma}. Feito com HTML, CSS e JavaScript.<br>Veja <a target="_blank" href="https://raqcalazans.github.io/ToDoList/">aqui</a>.</p>
+              Site para cadastrar tarefas, marcar as já feitas e excluir as que desejar. Foi o exercício da 6ª semana do bootcamp de front-end da <a target="_blank" href="https://reprograma.com.br/">{reprograma}</a>. Feito com HTML, CSS e JavaScript. Veja <a target="_blank" href="https://raqcalazans.github.io/ToDoList/">aqui</a>.</p>
             </p>
           </div>
         </div>
@@ -140,12 +135,12 @@
       <div class="flip-card">
         <div class="card">
           <figure class="card-front">
-            <img class="img-portfolio" src="./img/Glicetec - logo.png" alt="Web design">
+            <img class="img-portfolio" src="./img/Glicetec - logo.png" alt="Glicetec">
             <figcaption>Glicetec</figcaption>
           </figure>
           <div class="card-back">
             <p>
-              O Glicetec é uma aplicação web que é um assistente médico pessoal de diabéticos e pré-diabéticos. Desenvolvido em HTML, CSS, JavaScript, Bootstrap, jQuery e JSON LocalStorage. Veja <a target="_blank" href="https://icei-puc-minas-pples-ti.github.io/plf-es-2021-1-ti1-7946100-glicemiaglicetec/">aqui.</a>
+              O Glicetec é um assistente médico pessoal para diabéticos e pré-diabéticos. Foi desenvolvido em HTML, CSS, JavaScript, Bootstrap, jQuery e JSON LocalStorage. Veja <a target="_blank" href="https://icei-puc-minas-pples-ti.github.io/plf-es-2021-1-ti1-7946100-glicemiaglicetec/">aqui.</a>
             </p>
           </div>
         </div>
@@ -155,7 +150,6 @@
   </section>
 
   <footer class="contato container" id="contato">
-    <!-- <h2>Contato</h2> -->
     <div class="grid icons">
       <a target="_blank" href="https://github.com/raqcalazans">
         <i class="fab fa-github"></i>
